Fixing overflow properties

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ body {
     height: 100%;
 	padding: 0px;
 	margin: 0px;
+    overflow: hidden;
 }
 
 /******************************************************
@@ -114,7 +115,6 @@ body {
     width: 7%;
     float: left;
     position: absolute;
-    overflow: hidden;
     top: 0;
     bottom: 0;
     left: 0;
@@ -124,7 +124,6 @@ body {
 #menu ul {
     list-style: none;
     position: absolute;
-    overflow: hidden;
     padding-left: 0px;
     bottom: 0;
     left: 0;
@@ -207,7 +206,6 @@ body {
     width: 27%;
     float: left;
     position: absolute;
-    overflow: hidden;
     top: 0;
     bottom: 0;
     left: 0;
@@ -217,7 +215,6 @@ body {
 #submenu ul {
     list-style: none;
     position: absolute;
-    overflow: hidden;
     padding-left: 10%;
     width: 90%;
     bottom: 0;
@@ -293,7 +290,6 @@ body {
     min-height: 100%;
     max-height: 100%;
     height: 100%;
-    overflow-y: hidden;
 }
 
 #screen_new_order, #screen_order_status, #screen_order_review, #screen_order_category {
